Updated language files de_DE by LeoLele99 fr_FR & us_US by LemADEC

--- a/src/main/resources/assets/warpdrive/lang/de_DE.lang
+++ b/src/main/resources/assets/warpdrive/lang/de_DE.lang
@@ -31,7 +31,7 @@ item.warpdrive.crafting.Motor.name=Motor
 item.warpdrive.crafting.BoneCharcoal.name=Knochenkohle
 item.warpdrive.crafting.ActivatedCarbon.name=Aktivkohle
 item.warpdrive.crafting.LaserMediumEmpty.name=Medium Laser (leer)
-item.warpdrive.crafting.EMCProjector.name=EMC Projektor
+item.warpdrive.crafting.ElectromagneticProjector.name=Elektromagnetischer Projektor
 item.warpdrive.crafting.CoilCrystal.name=Spulenkristall
 
 item.warpdrive.armor.AirCanisterFull.name=Luftkanister
@@ -40,7 +40,7 @@ item.warpdrive.armor.Helmet.name=Warp Helm
 item.warpdrive.energy.IC2reactorLaserFocus.name=IC2 Reaktor-Laser-Fokus
 
 item.warpdrive.forcefield.shape.none.name=Keine Form
-item.warpdrive.forcefield.shape.none.tooltip=Â§4Ungültiges Item
+item.warpdrive.forcefield.shape.none.tooltip=§4Ungültiges Item
 item.warpdrive.forcefield.shape.sphere.name=Kugel Form
 item.warpdrive.forcefield.shape.sphere.tooltip=
 item.warpdrive.forcefield.shape.cylinder_h.name=Horizontaler Zylinder Form
@@ -55,44 +55,55 @@ item.warpdrive.forcefield.shape.tube.name=Röhren Form
 item.warpdrive.forcefield.shape.tube.tooltip=
 item.warpdrive.forcefield.shape.tunnel.name=Tunnel Form
 item.warpdrive.forcefield.shape.tunnel.tooltip=
+item.warpdrive.forcefield.shape.tooltip.usage=§bRechtsklicke einen Projektor§7 um ihn aufzuwerten\n§bSchleich-Rechtsklicke§7 zum abwerten
 
 item.warpdrive.forcefield.upgrade.none.name=Kein Upgrade
 item.warpdrive.forcefield.upgrade.none.tooltip=§4Ungültiges Item
-item.warpdrive.forcefield.upgrade.break.name=Block Brecher Upgrade
-item.warpdrive.forcefield.upgrade.break.tooltip=§4Nicht implementiert\nZerstört Blöcke anstatt ein Kraftfeld zu projizieren. Füge Block Brecher Upgrades hinzu um den Efffekt zu verstärken.
+item.warpdrive.forcefield.upgrade.attraction.name=Attraction upgrade !!!
+item.warpdrive.forcefield.upgrade.attraction.tooltip=Pull block breaker drops for storage. Add more Attraction upgrades to affect items, passive entities, monsters and eventually players. Add an Inversion for an area/terraforming effect. !!!
+item.warpdrive.forcefield.upgrade.breaking.name=Block Brecher Upgrade
+item.warpdrive.forcefield.upgrade.breaking.tooltip=Zerstört Blöcke anstatt ein Kraftfeld zu projizieren. Füge Block Brecher Upgrades hinzu um den Efffekt zu verstärken.
 item.warpdrive.forcefield.upgrade.camouflage.name=Camouflage Upgrade
-item.warpdrive.forcefield.upgrade.camouflage.tooltip=§4Work in progress\nTarnt das Kraftfeld. Platziere den Block, den du als Tarnung benutzen willst, auf dem Relais. 
-item.warpdrive.forcefield.upgrade.cool.name=Kühler Upgrade
-item.warpdrive.forcefield.upgrade.cool.tooltip=§4Work in progress\nFriere Blöcke und Entities ein. Je mehr Upgrades desto größer der Effekt. Inversions Upgrade für Terraforming Effekt.
+item.warpdrive.forcefield.upgrade.camouflage.tooltip=Tarnt das Kraftfeld. Platziere den Block, den du als Tarnung benutzen willst, auf dem Relais. 
+item.warpdrive.forcefield.upgrade.cooling.name=Kühler Upgrade
+item.warpdrive.forcefield.upgrade.cooling.tooltip=Friere Blöcke und Entities ein. Je mehr Upgrades desto größer der Effekt. Inversions Upgrade für Terraforming Effekt.
 item.warpdrive.forcefield.upgrade.fusion.name=Fusions Upgrade
 item.warpdrive.forcefield.upgrade.fusion.tooltip=Verschmelze zwei Kraftfelder, die dieselbe Strahlfrequenz haben.
-item.warpdrive.forcefield.upgrade.invert.name=Inversions Upgrade
-item.warpdrive.forcefield.upgrade.invert.tooltip=§4Work in progress\nOberflächen Effekt zu Raum Effekt. Für Entity Zielerfassung oder Terraforming.
-item.warpdrive.forcefield.upgrade.mute.name=Schalldämpfer Upgrade
-item.warpdrive.forcefield.upgrade.mute.tooltip=§4Work in progress\nDämpft die Geräusche verbundener Maschinen.
-item.warpdrive.forcefield.upgrade.pump.name=Pumpen Upgrade
-item.warpdrive.forcefield.upgrade.pump.tooltip=§4Not implemented\nPumpe Flüssigkeiten im Einflussbereich. Um dickflüssigeres zu pumpen füge mehr  Pumpen Upgrades hinzu.
+item.warpdrive.forcefield.upgrade.heating.name=Heizungs Upgrade
+item.warpdrive.forcefield.upgrade.heating.tooltip=Erhitze Blöcke und Entities. Mehr Upgrades verstärken den Effekt. Inversions Upgrade für Terraforming Effekt.
+item.warpdrive.forcefield.upgrade.inversion.name=Inversions Upgrade
+item.warpdrive.forcefield.upgrade.inversion.tooltip=§4Work in progress\nOberflächen Effekt zu Raum Effekt. Für Entity Zielerfassung oder Terraforming.
+item.warpdrive.forcefield.upgrade.itemPort.name=Item port upgrade !!!
+item.warpdrive.forcefield.upgrade.itemPort.tooltip=Interface with attached containers. Add an Attraction upgrade to collect Block breaker drops. Add a Repulsion upgrade to provide blocks to place using a Stabilization upgrade. !!!
+item.warpdrive.forcefield.upgrade.pumping.name=Pumpen Upgrade
+item.warpdrive.forcefield.upgrade.pumping.tooltip=§4Work in progress\nPumpe Flüssigkeiten im Einflussbereich. Um dickflüssigeres zu pumpen füge mehr  Pumpen Upgrades hinzu.
 item.warpdrive.forcefield.upgrade.range.name=Reichweiten Upgrade
 item.warpdrive.forcefield.upgrade.range.tooltip=Vergrößere den maximalen Einflussbereich
+item.warpdrive.forcefield.upgrade.repulsion.name=Repulsion upgrade !!!
+item.warpdrive.forcefield.upgrade.repulsion.tooltip=Push stored items to be placed by stabilisation upgrade. Add more Repulsion upgrades to affect passive entities, monsters and eventually players. Add an Inversion for an area/terraforming effect. !!!
 item.warpdrive.forcefield.upgrade.rotation.name=Rotations Upgrade
 item.warpdrive.forcefield.upgrade.rotation.tooltip=Aktiviert Kraftfeld Roatation
 item.warpdrive.forcefield.upgrade.shock.name=Shock Upgrade
-item.warpdrive.forcefield.upgrade.shock.tooltip=§4Work in progress\nSchocke Blocks und Entities. Mehr Upgrades verstärken den Effekt. Inversions Upgrade für Terraforming Effekt.
+item.warpdrive.forcefield.upgrade.shock.tooltip=Schocke Blocks und Entities. Mehr Upgrades verstärken den Effekt. Inversions Upgrade für Terraforming Effekt.
+item.warpdrive.forcefield.upgrade.silencer.name=Schalldämpfer Upgrade
+item.warpdrive.forcefield.upgrade.silencer.tooltip=Dämpft die Geräusche verbundener Maschinen.
 item.warpdrive.forcefield.upgrade.speed.name=Geschwindigkeits Upgrade
 item.warpdrive.forcefield.upgrade.speed.tooltip=Erhöhe die Kraftfeld Projektions Geschwindigkeit.
-item.warpdrive.forcefield.upgrade.stabilize.name=Stabilisations Upgrade
-item.warpdrive.forcefield.upgrade.stabilize.tooltip=§4Not implemented\nPlatziert Blöcke anstatt ein Kraftfeld zu projizieren.
+item.warpdrive.forcefield.upgrade.stabilization.name=Stabilisations Upgrade
+item.warpdrive.forcefield.upgrade.stabilization.tooltip=Platziert Blöcke anstatt ein Kraftfeld zu projizieren.
 item.warpdrive.forcefield.upgrade.thickness.name=Stärke Upgrade
 item.warpdrive.forcefield.upgrade.thickness.tooltip=Erhöhe die Dicke des Kraftfelds. Mehr Upgrades verstärken den Effekt (bis zu 2x).
 item.warpdrive.forcefield.upgrade.translation.name=Translations Upgrade
 item.warpdrive.forcefield.upgrade.translation.tooltip=Aktiviert Kraftfeld Translation.
-item.warpdrive.forcefield.upgrade.warm.name=Heizungs Upgrade
-item.warpdrive.forcefield.upgrade.warm.tooltip=§4Work in progress\nErhitze Blöcke und Entities. Mehr Upgrades verstärken den Effekt. Inversions Upgrade für Terraforming Effekt.
+item.warpdrive.forcefield.upgrade.tooltip.usage.projector=§bRechtsklicke einen Projektor§7 um ihn aufzuwerten
+item.warpdrive.forcefield.upgrade.tooltip.usage.relay=§bRechtsklicke ein Realais§7 um es aufzuwerten
+item.warpdrive.forcefield.upgrade.tooltip.usage.dismount=§bSchleich-Rechtsklicke§7 zum abwerten
 
 item.warpdrive.upgrade.Power.name=Power Upgrade
 item.warpdrive.upgrade.Speed.name=Geschwindigkeits Upgrade
 item.warpdrive.upgrade.Range.name=Reichweiten Upgrade
 item.warpdrive.upgrade.Energy.name=Energie Upgrade
+
 
 item.warpdrive.tool.TuningFork.name=Stimmgabel
 item.warpdrive.tool.TuningFork.white.name=Weiße Stimmgabel
@@ -111,11 +122,13 @@ item.warpdrive.tool.TuningFork.brown.name=Braune Stimmgabel
 item.warpdrive.tool.TuningFork.green.name=Grüne Stimmgabel
 item.warpdrive.tool.TuningFork.red.name=Rote Stimmgabel
 item.warpdrive.tool.TuningFork.black.name=Schwarze Stimmgabel
+
 item.warpdrive.tool.TuningFork.tooltip.videoChannel=Videokanal auf %1$d gestellt 
 item.warpdrive.tool.TuningFork.tooltip.beamFrequency=Strahlfrequenz auf %1$d gestellt
-item.warpdrive.tool.TuningFork.tooltip.usage=\n\nÂ§bRecktsklicke einen BlockÂ§7 um seine Kristalle einzustellen\nÂ§bSschleicheÂ§7 um alternative Kristalle einzustellen
+item.warpdrive.tool.TuningFork.tooltip.usage=§bRecktsklicke einen Block§7 um seine Kristalle einzustellen\n§bSschleiche§7 um alternative Kristalle einzustellen
 item.warpdrive.tool.TuningFork.use.setVideoChannel=%1$s ist jetzt auf Videokanal %2$d gestellt
 item.warpdrive.tool.TuningFork.use.setBeamFrequency=%1$s ist jetzt mit Strahlfrequenz %2$d verknüpft
+
 
 tile.warpdrive.passive.Air.name=Luft Block
 tile.warpdrive.passive.Energized.name=Energiegeladener Block
@@ -152,8 +165,14 @@ tile.warpdrive.forcefield.block1.name=Standard Kraftfeld
 tile.warpdrive.forcefield.block2.name=Weiterentwickeltes Kraftfeld
 tile.warpdrive.forcefield.block3.name=Überlegenes Kraftfeld
 tile.warpdrive.forcefield.projector1.name=Standard Kraftfeld Projektor
+tile.warpdrive.forcefield.projector1.single.name=Standard Kraftfeld Halb Projektor
+tile.warpdrive.forcefield.projector1.double.name=Standard Kraftfeld Voll Projektor
 tile.warpdrive.forcefield.projector2.name=Weiterentwickelter Kraftfeld Projektor
+tile.warpdrive.forcefield.projector2.single.name=Weiterentwickelter Kraftfeld Halb Projektor
+tile.warpdrive.forcefield.projector2.double.name=Weiterentwickelter Kraftfeld Voll Projektor
 tile.warpdrive.forcefield.projector3.name=Überlegener Kraftfeld Projektor
+tile.warpdrive.forcefield.projector3.single.name=Überlegener Kraftfeld Halb Projektor
+tile.warpdrive.forcefield.projector3.double.name=Überlegener Kraftfeld Voll Projektor
 
 tile.warpdrive.forcefield.relay1.name=Standard Kraftfeld Relais
 tile.warpdrive.forcefield.relay1.tooltip=Unterstützt bis zu 1 Upgrade im Netzwerk
@@ -275,8 +294,8 @@ tile.warpdrive.hull3.glass.red.name=Roter überlegener Glasrumpf
 tile.warpdrive.hull3.glass.black.name=Schwarzer überlegener Glasrumpf
 
 
-warpdrive.guide.prefix=%1$s: 
-warpdrive.error.badTileEntity=Â§cDieser Block benötigt ein Update, durch zerstören und neu setzen. 
+warpdrive.guide.prefix=§6%1$s:§r
+warpdrive.error.badTileEntity=§cDieser Block benötigt ein Update, durch zerstören und neu setzen.
 warpdrive.monitor.viewingCamera=Kamera bei %2$d, %3$d, %4$d läuft auf Videokanal %1$d
 warpdrive.ship.attachedPlayers=Verbundene Spieler: %1$s
 warpdrive.ship.playerAttached=Du bist jetzt mit dem Schiff %1$s verbunden.\nVerbundene Spieler sind %2$s
@@ -284,10 +303,20 @@ warpdrive.ship.playerDetached=Du wurdest vom Schiff %1$s getrennt.\nVerbundene S
 warpdrive.ship.statusLine.cooling=%1$d s Abklingzeit verbleibend.
 warpdrive.ship.statusLine.isolation=%1$d aktive Isolations Blöcke bieten %2$2.1f%% Absorption.
 warpdrive.energy.statusLine=Das Energie Level ist %1$s/%2$s EU.
-warpdrive.beamFrequency.statusLine.valid=Strahlfrequenz %1$d ist gültig. 
-warpdrive.beamFrequency.statusLine.invalid=Â§cStrahlfrequenz %1$d ist ungültig!
+warpdrive.beamFrequency.statusLine.valid=Strahlfrequenz %1$d ist gültig.
+warpdrive.beamFrequency.statusLine.invalid=§cStrahlfrequenz %1$d ist ungültig.
+warpdrive.beamFrequency.statusLine.undefined=§7Undefinierte Strahlfrequenz.\n§bNutze eine Stimmgabel§f um die Strahlfrequenz festzulegen.
 
-warpdrive.forcefield.shape.statusLine.none=Â§cForm ist nicht definiert
+warpdrive.forcefield.guide.lowPower=Uns geht die Energie aus, Captain. Verringere unseren Energieverbrauch oder hol den schottischen Ingenieur!
+
+warpdrive.forcefield.shape.result.wrongSide=§cAuf dieser Seite gibt es keinen Elektromagnetischen Projektor.
+warpdrive.forcefield.shape.result.noShapeToDismount=§cKeine Form zum deinstallieren vorhanden.
+warpdrive.forcefield.shape.result.notEnoughShapes.double=§cDu brauchst mindestens 2 Items um einen doppelseitigen Projektor einzustellen.
+warpdrive.forcefield.shape.result.notEnoughShapes.single=§cDu brauchst mindestens 1 Item um einen einseitigen Projektor einzustellen.
+warpdrive.forcefield.shape.result.dismounted=Form erfolgreich deinstalliert.
+warpdrive.forcefield.shape.result.mounted=Form erfolgreich installiert.
+
+warpdrive.forcefield.shape.statusLine.none=§cForm ist nicht definiert
 warpdrive.forcefield.shape.statusLine.double=Die Form ist ein(e) volle(r) %1$s
 warpdrive.forcefield.shape.statusLine.single=Die Form ist ein(e) halbe(r) %1$s
 warpdrive.forcefield.shape.statusLine.sphere=Kugel
@@ -298,31 +327,42 @@ warpdrive.forcefield.shape.statusLine.plane=Ebene
 warpdrive.forcefield.shape.statusLine.tube=Röhre
 warpdrive.forcefield.shape.statusLine.tunnel=Tunnel
 
-warpdrive.forcefield.upgrade.statusLine.none=Â§cKein Upgrade installiert.
+warpdrive.forcefield.upgrade.result.noUpgradeToDismount=§cKein Upgrade zum deinstallieren vorhanden.
+warpdrive.forcefield.upgrade.result.notEnoughUpgrades=§cDu brauchst mindestens 1 Item um diesen Block aufzuwerten.
+warpdrive.forcefield.upgrade.result.invalidProjectorUpgrade=§cDieses Upgrade ist zu groß für einen Projektor. Nutze ein Relais.
+warpdrive.forcefield.upgrade.result.invalidRelayUpgrade=§cThis upgrade only applies to projectors. !!!
+warpdrive.forcefield.upgrade.result.dismounted=Upgrade erfolgreich deinstalliert.
+warpdrive.forcefield.upgrade.result.mounted=Upgrade erfolgreich installiert.
+
+warpdrive.forcefield.upgrade.statusLine.none=§7Kein Upgrade installiert.
 warpdrive.forcefield.upgrade.statusLine.valid=%1$s Upgrade installiert
-warpdrive.forcefield.upgrade.statusLine.break=Block Brecher
+warpdrive.forcefield.upgrade.statusLine.attraction=attraction !!!
+warpdrive.forcefield.upgrade.statusLine.breaking=Block Brecher
 warpdrive.forcefield.upgrade.statusLine.camouflage=Camouflage
-warpdrive.forcefield.upgrade.statusLine.cool=Kühler
+warpdrive.forcefield.upgrade.statusLine.cooling=Kühler
 warpdrive.forcefield.upgrade.statusLine.fusion=Fusions
-warpdrive.forcefield.upgrade.statusLine.invert=Inversions
-warpdrive.forcefield.upgrade.statusLine.mute=Schalldämpfer
+warpdrive.forcefield.upgrade.statusLine.heating=Heizungs
+warpdrive.forcefield.upgrade.statusLine.inversion=Inversions
+warpdrive.forcefield.upgrade.statusLine.itemPort=item port !!!
 warpdrive.forcefield.upgrade.statusLine.pump=Pumpen
 warpdrive.forcefield.upgrade.statusLine.range=Reichweiten
+warpdrive.forcefield.upgrade.statusLine.repulsion=repulsion !!!
 warpdrive.forcefield.upgrade.statusLine.rotation=Rotations
 warpdrive.forcefield.upgrade.statusLine.shock=Schock
+warpdrive.forcefield.upgrade.statusLine.silencer=Schalldämpfer
 warpdrive.forcefield.upgrade.statusLine.speed=Geschwindigkeits
-warpdrive.forcefield.upgrade.statusLine.stabilize=Stabilisations
+warpdrive.forcefield.upgrade.statusLine.stabilization=Stabilisations
 warpdrive.forcefield.upgrade.statusLine.thickness=Stärke
 warpdrive.forcefield.upgrade.statusLine.translation=Translations
-warpdrive.forcefield.upgrade.statusLine.warm=Heizungs
 
-warpdrive.videoChannel.statusLine.valid=Videokanal %1$d ist gültig. 
-warpdrive.videoChannel.statusLine.validCamera=Videokanal %1$d ist gültig für die Kamera bei %2$d, %3$d, %4$d. 
-warpdrive.videoChannel.statusLine.invalid=Â§cVideokanal %1$d ist ungültig.
-warpdrive.videoChannel.statusLine.invalidOrNotLoaded=Â§cVideokanal %1$d ist ungültig oder die Kamera ist zu weit weg!
-warpdrive.cloakingCore.invalidAssembly=Â§Konstruktion ungültig!
+warpdrive.videoChannel.statusLine.valid=Videokanal %1$d ist gültig.
+warpdrive.videoChannel.statusLine.validCamera=Videokanal %1$d ist gültig für die Kamera bei %2$d, %3$d, %4$d.
+warpdrive.videoChannel.statusLine.invalid=§cVideokanal %1$d ist ungültig.
+warpdrive.videoChannel.statusLine.invalidOrNotLoaded=§cVideokanal %1$d ist ungültig oder die Kamera ist zu weit weg!
+warpdrive.videoChannel.statusLine.undefined=§7Undefined Video channel.\n§bUse a Tuning fork§r to set it.
+warpdrive.cloakingCore.invalidAssembly=§Konstruktion ungültig!
 warpdrive.cloakingCore.disabled=Tarnfeld ist deaktiviert!
-warpdrive.cloakingCore.lowPower=Â§cTarnfeld ist ausgefallen, wir brauchen mehr Energie, Captain!
+warpdrive.cloakingCore.lowPower=§cTarnfeld ist ausgefallen, wir brauchen mehr Energie, Captain!
 warpdrive.cloakingCore.cloaking=Ein Stufe %1$d Tarnfeld überdeckt jetzt %2$d Blöcke!
 warpdrive.IC2reactorLaserMonitor.noReactor=Kein Reaktor gefunden!
 warpdrive.IC2reactorLaserMonitor.multipleReactors=%1$d Reaktor(en) verbunden.
