--- a/src/main/resources/assets/warpdrive/lang/en_US.lang
+++ b/src/main/resources/assets/warpdrive/lang/en_US.lang
@@ -31,7 +31,7 @@ item.warpdrive.crafting.Motor.name=Motor
 item.warpdrive.crafting.BoneCharcoal.name=Bone Charcoal
 item.warpdrive.crafting.ActivatedCarbon.name=Activated Carbon
 item.warpdrive.crafting.LaserMediumEmpty.name=Laser Medium (empty)
-item.warpdrive.crafting.EMCProjector.name=EMC Projector
+item.warpdrive.crafting.ElectromagneticProjector.name=Electromagnetic Projector
 item.warpdrive.crafting.CoilCrystal.name=Coil Crystal
 
 item.warpdrive.armor.AirCanisterFull.name=Air Canister
@@ -55,44 +55,55 @@ item.warpdrive.forcefield.shape.tube.name=Tube shape
 item.warpdrive.forcefield.shape.tube.tooltip=
 item.warpdrive.forcefield.shape.tunnel.name=Tunnel shape
 item.warpdrive.forcefield.shape.tunnel.tooltip=
+item.warpdrive.forcefield.shape.tooltip.usage=§bRight click a projector§7 to upgrade it\n§bSneak-right click§7 to downgrade
 
 item.warpdrive.forcefield.upgrade.none.name=No upgrade
 item.warpdrive.forcefield.upgrade.none.tooltip=§4Invalid item
-item.warpdrive.forcefield.upgrade.break.name=Block breaker upgrade
-item.warpdrive.forcefield.upgrade.break.tooltip=§4Not implemented\nBreak blocks instead of projecting a force field. Add more Block breaker upgrades to increase mining level.
+item.warpdrive.forcefield.upgrade.attraction.name=Attraction upgrade
+item.warpdrive.forcefield.upgrade.attraction.tooltip=Pull block breaker drops for storage. Add more Attraction upgrades to affect items, passive entities, monsters and eventually players. Add an Inversion for an area/terraforming effect.
+item.warpdrive.forcefield.upgrade.breaking.name=Block breaker upgrade
+item.warpdrive.forcefield.upgrade.breaking.tooltip=Break blocks instead of projecting a force field. Add more Block breaker upgrades to increase mining level.
 item.warpdrive.forcefield.upgrade.camouflage.name=Camouflage upgrade
-item.warpdrive.forcefield.upgrade.camouflage.tooltip=§4Work in progress\nDisguise force field into a custom block. Place a block on top of the upgraded relay to define the camouflage block. 
-item.warpdrive.forcefield.upgrade.cool.name=Cooling upgrade
-item.warpdrive.forcefield.upgrade.cool.tooltip=§4Work in progress\nFreeze blocks and entities. Add more Cool upgrades to boost effect. Add an Inversion for an area/terraforming effect.
+item.warpdrive.forcefield.upgrade.camouflage.tooltip=Disguise force field into a custom block. Place a block on top of the upgraded relay to define the camouflage block. Add more camouflage upgrades to increase speed.
+item.warpdrive.forcefield.upgrade.cooling.name=Cooling upgrade
+item.warpdrive.forcefield.upgrade.cooling.tooltip=Freeze blocks and entities. Add more Cooling upgrades to boost effect. Add an Inversion for an area/terraforming effect.
 item.warpdrive.forcefield.upgrade.fusion.name=Fusion upgrade
 item.warpdrive.forcefield.upgrade.fusion.tooltip=Merge overlapping force fields sharing the same beam frequency network
-item.warpdrive.forcefield.upgrade.invert.name=Inversion upgrade
-item.warpdrive.forcefield.upgrade.invert.tooltip=§4Work in progress\nChange from surface to volume effect area. Use this for entity targeting or terraforming.
-item.warpdrive.forcefield.upgrade.mute.name=Muting upgrade
-item.warpdrive.forcefield.upgrade.mute.tooltip=§4Work in progress\nSilence the attached block
-item.warpdrive.forcefield.upgrade.pump.name=Pumping upgrade
-item.warpdrive.forcefield.upgrade.pump.tooltip=§4Not implemented\nPump fluids at the force field location. Add more Pump upgrades to pull fluid with higher viscosity fluids like lava.
+item.warpdrive.forcefield.upgrade.heating.name=Heating upgrade
+item.warpdrive.forcefield.upgrade.heating.tooltip=Heat up blocks and entities. Add more Heating upgrades to boost effect. Add an Inversion for an area/terraforming effect.
+item.warpdrive.forcefield.upgrade.inversion.name=Inversion upgrade
+item.warpdrive.forcefield.upgrade.inversion.tooltip=§4Work in progress\nChange from surface to volume effect area. Use this for entity targeting or terraforming.
+item.warpdrive.forcefield.upgrade.itemPort.name=Item port upgrade
+item.warpdrive.forcefield.upgrade.itemPort.tooltip=Interface with attached containers. Add an Attraction upgrade to collect Block breaker drops. Add a Repulsion upgrade to provide blocks to place using a Stabilization upgrade.
+item.warpdrive.forcefield.upgrade.pumping.name=Pumping upgrade
+item.warpdrive.forcefield.upgrade.pumping.tooltip=§4Work in progress\nPump fluids at the force field location. Add more Pump upgrades to pull fluid with higher viscosity fluids like lava.
 item.warpdrive.forcefield.upgrade.range.name=Range upgrade
 item.warpdrive.forcefield.upgrade.range.tooltip=Increase the projector maximum range
+item.warpdrive.forcefield.upgrade.repulsion.name=Repulsion upgrade
+item.warpdrive.forcefield.upgrade.repulsion.tooltip=Push stored items to be placed by stabilisation upgrade. Add more Repulsion upgrades to affect passive entities, monsters and eventually players. Add an Inversion for an area/terraforming effect.
 item.warpdrive.forcefield.upgrade.rotation.name=Rotation upgrade
 item.warpdrive.forcefield.upgrade.rotation.tooltip=Enable force field rotation
 item.warpdrive.forcefield.upgrade.shock.name=Shock upgrade
-item.warpdrive.forcefield.upgrade.shock.tooltip=§4Work in progress\nElectrify blocks and entities. Add more Shock upgrades to boost effect. Add an Inversion for an area/terraforming effect.
+item.warpdrive.forcefield.upgrade.shock.tooltip=Electrify blocks and entities. Add more Shock upgrades to boost effect. Add an Inversion for an area/terraforming effect.
+item.warpdrive.forcefield.upgrade.silencer.name=Silencer upgrade
+item.warpdrive.forcefield.upgrade.silencer.tooltip=Silence the attached block
 item.warpdrive.forcefield.upgrade.speed.name=Speed upgrade
 item.warpdrive.forcefield.upgrade.speed.tooltip=Increase force field projection speed
-item.warpdrive.forcefield.upgrade.stabilize.name=Stabilization upgrade
-item.warpdrive.forcefield.upgrade.stabilize.tooltip=§4Not implemented\nPlace blocks instead of projecting a force field
+item.warpdrive.forcefield.upgrade.stabilization.name=Stabilization upgrade
+item.warpdrive.forcefield.upgrade.stabilization.tooltip=Place blocks instead of projecting a force field
 item.warpdrive.forcefield.upgrade.thickness.name=Thickness upgrade
 item.warpdrive.forcefield.upgrade.thickness.tooltip=Increase force field thickness. Add more Thickness upgrades to increase effect, up to doubling.
 item.warpdrive.forcefield.upgrade.translation.name=Translation upgrade
 item.warpdrive.forcefield.upgrade.translation.tooltip=Enable force field translation
-item.warpdrive.forcefield.upgrade.warm.name=Heating upgrade
-item.warpdrive.forcefield.upgrade.warm.tooltip=§4Work in progress\nHeat up blocks and entities. Add more Warm upgrades to boost effect. Add an Inversion for an area/terraforming effect.
+item.warpdrive.forcefield.upgrade.tooltip.usage.projector=§bRight click a projector§7 to upgrade it
+item.warpdrive.forcefield.upgrade.tooltip.usage.relay=§bRight click a relay§7 to upgrade it
+item.warpdrive.forcefield.upgrade.tooltip.usage.dismount=§bSneak-right click§7 to downgrade
 
 item.warpdrive.upgrade.Power.name=Power Upgrade
 item.warpdrive.upgrade.Speed.name=Speed Upgrade
 item.warpdrive.upgrade.Range.name=Range Upgrade
 item.warpdrive.upgrade.Energy.name=Energy Upgrade
+
 
 item.warpdrive.tool.TuningFork.name=Tuning Fork
 item.warpdrive.tool.TuningFork.white.name=White Tuning Fork
@@ -111,9 +122,10 @@ item.warpdrive.tool.TuningFork.brown.name=Brown Tuning Fork
 item.warpdrive.tool.TuningFork.green.name=Green Tuning Fork
 item.warpdrive.tool.TuningFork.red.name=Red Tuning Fork
 item.warpdrive.tool.TuningFork.black.name=Black Tuning Fork
+
 item.warpdrive.tool.TuningFork.tooltip.videoChannel=Video channel is set to %1$d
 item.warpdrive.tool.TuningFork.tooltip.beamFrequency=Beam frequency is set to %1$d
-item.warpdrive.tool.TuningFork.tooltip.usage=\n\n§bRight click a block§7 to tune its crystals\n§bSneak§7 to tune alternate crystals
+item.warpdrive.tool.TuningFork.tooltip.usage=§bRight click a block§7 to tune its crystals\n§bSneak§7 to tune alternate crystals
 item.warpdrive.tool.TuningFork.use.setVideoChannel=%1$s is now tuned to Video channel %2$d
 item.warpdrive.tool.TuningFork.use.setBeamFrequency=%1$s is now aligned with Beam frequency %2$d
 
@@ -153,8 +165,14 @@ tile.warpdrive.forcefield.block1.name=Basic Force Field Block
 tile.warpdrive.forcefield.block2.name=Advanced Force Field Block
 tile.warpdrive.forcefield.block3.name=Superior Force Field Block
 tile.warpdrive.forcefield.projector1.name=Basic Force Field Projector
+tile.warpdrive.forcefield.projector1.single.name=Basic Force Field Half Projector
+tile.warpdrive.forcefield.projector1.double.name=Basic Force Field Full Projector
 tile.warpdrive.forcefield.projector2.name=Advanced Force Field Projector
+tile.warpdrive.forcefield.projector2.single.name=Advanced Force Field Half Projector
+tile.warpdrive.forcefield.projector2.double.name=Advanced Force Field Full Projector
 tile.warpdrive.forcefield.projector3.name=Superior Force Field Projector
+tile.warpdrive.forcefield.projector3.single.name=Superior Force Field Half Projector
+tile.warpdrive.forcefield.projector3.double.name=Superior Force Field Full Projector
 
 tile.warpdrive.forcefield.relay1.name=Basic Force Field Relay
 tile.warpdrive.forcefield.relay1.tooltip=Supports up to 1 force field upgrade shared within its network
@@ -276,8 +294,8 @@ tile.warpdrive.hull3.glass.red.name=Red Stained Superior Hull Glass
 tile.warpdrive.hull3.glass.black.name=Black Stained Superior Hull Glass
 
 
-warpdrive.guide.prefix=%1$s: 
-warpdrive.error.badTileEntity=§cthis block needs an update by breaking and placing it. 
+warpdrive.guide.prefix=§6%1$s:§r 
+warpdrive.error.badTileEntity=§cThis block needs an update by breaking and placing it.
 warpdrive.monitor.viewingCamera=Viewing camera at %2$d, %3$d, %4$d on video channel %1$d
 warpdrive.ship.attachedPlayers=Attached players: %1$s
 warpdrive.ship.playerAttached=You're now attached to ship %1$s.\nAttached players are %2$s
@@ -285,8 +303,18 @@ warpdrive.ship.playerDetached=You've been detached from ship %1$s.\nAttached pla
 warpdrive.ship.statusLine.cooling=%1$d s left of cooldown.
 warpdrive.ship.statusLine.isolation=%1$d active isolation blocks providing %2$2.1f%% absorption.
 warpdrive.energy.statusLine=Energy level is %1$s/%2$s EU.
-warpdrive.beamFrequency.statusLine.valid=Beam frequency %1$d is valid. 
-warpdrive.beamFrequency.statusLine.invalid=§cBeam frequency %1$d is invalid!
+warpdrive.beamFrequency.statusLine.valid=Beam frequency %1$d is valid.
+warpdrive.beamFrequency.statusLine.invalid=§cBeam frequency %1$d is invalid.
+warpdrive.beamFrequency.statusLine.undefined=§7Undefined beam frequency.\n§bUse a Tuning fork§r to set Beam frequency.
+
+warpdrive.forcefield.guide.lowPower=We're running out of power captain, reduce our consumption or get that scottish engineer to boost our power!
+
+warpdrive.forcefield.shape.result.wrongSide=§cThere's no Electromagnetic projector on this side.
+warpdrive.forcefield.shape.result.noShapeToDismount=§cNo shape to dismount.
+warpdrive.forcefield.shape.result.notEnoughShapes.double=§cYou need at least 2 items to set the shape of a double sided projector.
+warpdrive.forcefield.shape.result.notEnoughShapes.single=§cYou need at least 1 item to set the shape of a single sided projector.
+warpdrive.forcefield.shape.result.dismounted=Shape dismounted successfully.
+warpdrive.forcefield.shape.result.mounted=Shape mounted successfully.
 
 warpdrive.forcefield.shape.statusLine.none=§cShape isn't defined.
 warpdrive.forcefield.shape.statusLine.double=Shape is a full %1$s
@@ -299,28 +327,40 @@ warpdrive.forcefield.shape.statusLine.plane=plane
 warpdrive.forcefield.shape.statusLine.tube=tube
 warpdrive.forcefield.shape.statusLine.tunnel=tunnel
 
-warpdrive.forcefield.upgrade.statusLine.none=§cNo upgrade installed.
+warpdrive.forcefield.upgrade.result.noUpgradeToDismount=§cNo upgrade to dismount.
+warpdrive.forcefield.upgrade.result.notEnoughUpgrades=§cYou need at least 1 item to upgrade this block.
+warpdrive.forcefield.upgrade.result.invalidProjectorUpgrade=§cThis upgrade is too big for a projector, use a relay instead.
+warpdrive.forcefield.upgrade.result.invalidRelayUpgrade=§cThis upgrade only applies to projectors.
+warpdrive.forcefield.upgrade.result.tooManyUpgrades=§cThere's already %1$s upgrades installed, use a relay to add more.
+warpdrive.forcefield.upgrade.result.dismounted=Upgrade dismounted successfully.
+warpdrive.forcefield.upgrade.result.mounted=Upgrade mounted successfully.
+
+warpdrive.forcefield.upgrade.statusLine.none=§7No upgrade installed.
 warpdrive.forcefield.upgrade.statusLine.valid=Upgraded with %1$s
-warpdrive.forcefield.upgrade.statusLine.break=block breaking
+warpdrive.forcefield.upgrade.statusLine.attraction=attraction
+warpdrive.forcefield.upgrade.statusLine.breaking=block breaking
 warpdrive.forcefield.upgrade.statusLine.camouflage=camouflage
-warpdrive.forcefield.upgrade.statusLine.cool=cooling
+warpdrive.forcefield.upgrade.statusLine.cooling=cooling
 warpdrive.forcefield.upgrade.statusLine.fusion=fusion
-warpdrive.forcefield.upgrade.statusLine.invert=inversion
-warpdrive.forcefield.upgrade.statusLine.mute=muting
-warpdrive.forcefield.upgrade.statusLine.pump=pumping
+warpdrive.forcefield.upgrade.statusLine.heating=heating
+warpdrive.forcefield.upgrade.statusLine.inversion=inversion
+warpdrive.forcefield.upgrade.statusLine.itemPort=item port
+warpdrive.forcefield.upgrade.statusLine.pumping=pumping
 warpdrive.forcefield.upgrade.statusLine.range=increased range
+warpdrive.forcefield.upgrade.statusLine.repulsion=repulsion
 warpdrive.forcefield.upgrade.statusLine.rotation=rotation
 warpdrive.forcefield.upgrade.statusLine.shock=shock
+warpdrive.forcefield.upgrade.statusLine.silencer=silencer
 warpdrive.forcefield.upgrade.statusLine.speed=speed
-warpdrive.forcefield.upgrade.statusLine.stabilize=stabilization
+warpdrive.forcefield.upgrade.statusLine.stabilization=stabilization
 warpdrive.forcefield.upgrade.statusLine.thickness=thickness
 warpdrive.forcefield.upgrade.statusLine.translation=translation
-warpdrive.forcefield.upgrade.statusLine.warm=heating
 
-warpdrive.videoChannel.statusLine.valid=Video channel %1$d is valid. 
-warpdrive.videoChannel.statusLine.validCamera=Video channel %1$d is valid for camera at %2$d, %3$d, %4$d. 
+warpdrive.videoChannel.statusLine.valid=Video channel %1$d is valid.
+warpdrive.videoChannel.statusLine.validCamera=Video channel %1$d is valid for camera at %2$d, %3$d, %4$d.
 warpdrive.videoChannel.statusLine.invalid=§cVideo channel %1$d is invalid.
 warpdrive.videoChannel.statusLine.invalidOrNotLoaded=§cVideo channel %1$d is invalid or camera is too far away!
+warpdrive.videoChannel.statusLine.undefined=§7Undefined Video channel.\n§bUse a Tuning fork§r to set it.
 warpdrive.cloakingCore.invalidAssembly=§cInvalid assembly!
 warpdrive.cloakingCore.disabled=Cloak is disabled
 warpdrive.cloakingCore.lowPower=§cCloak is down, we need more power Captain!
