--- a/src/main/resources/assets/warpdrive/lang/fr_FR.lang
+++ b/src/main/resources/assets/warpdrive/lang/fr_FR.lang
@@ -21,7 +21,7 @@ item.warpdrive.crafting.ComputerInterface.name=Interface informatique
 item.warpdrive.crafting.PowerInterface.name=Power Interface
 item.warpdrive.crafting.CapacitiveCrystal.name=Cristal capacitif
 item.warpdrive.crafting.AirCanisterEmpty.name=Cartouche d'air vide
-item.warpdrive.crafting.AirCanisterEmpty.tooltip=§bClique droit sur un Générateur d'air§7 pour me remplir
+item.warpdrive.crafting.AirCanisterEmpty.tooltip=§bClique droit sur un Générateur d'air§r pour me remplir
 item.warpdrive.crafting.Lens.name=Lentille
 item.warpdrive.crafting.Zoom.name=Zoom
 item.warpdrive.crafting.GlassTank.name=Réservoir en verre
@@ -31,7 +31,7 @@ item.warpdrive.crafting.Motor.name=Moteur
 item.warpdrive.crafting.BoneCharcoal.name=Charbon d'ossements
 item.warpdrive.crafting.ActivatedCarbon.name=Charbon actif
 item.warpdrive.crafting.LaserMediumEmpty.name=Milieu amplificateur (vide)
-item.warpdrive.crafting.EMCProjector.name=Projecteur électromagnétique
+item.warpdrive.crafting.ElectromagneticProjector.name=Projecteur électromagnétique
 item.warpdrive.crafting.CoilCrystal.name=Cristal bobiné
 
 item.warpdrive.armor.AirCanisterFull.name=Cartouche d'air
@@ -55,44 +55,56 @@ item.warpdrive.forcefield.shape.tube.name=Forme de tube
 item.warpdrive.forcefield.shape.tube.tooltip=
 item.warpdrive.forcefield.shape.tunnel.name=Forme de tunnel
 item.warpdrive.forcefield.shape.tunnel.tooltip=
+item.warpdrive.forcefield.shape.tooltip.usage=§bClique droit sur un projecteur§r pour appliquer la forme
 
 item.warpdrive.forcefield.upgrade.none.name=Pas d'augmentation
 item.warpdrive.forcefield.upgrade.none.tooltip=§4Item invalide
-item.warpdrive.forcefield.upgrade.break.name=Augmentation casseur de block
-item.warpdrive.forcefield.upgrade.break.tooltip=§4Non implementé\nCasse les blocks au lieu de projecté un champ de force. Ajoutes en d'autres pour miner des blocks plus durs.
+item.warpdrive.forcefield.upgrade.attraction.name=Augmentation d'attraction
+item.warpdrive.forcefield.upgrade.attraction.tooltip=Collecte les blocks cassés. Ajoutes en d'autres pour affecter les items, animaux passifs, monstres et éventuellement les joueurs. Ajoute une inversion pour un effet de zone ou terraformation.
+item.warpdrive.forcefield.upgrade.breaking.name=Augmentation casseur de block
+item.warpdrive.forcefield.upgrade.breaking.tooltip=Casse les blocks au lieu de projecté un champ de force. Ajoutes en d'autres pour miner des blocks plus durs.
 item.warpdrive.forcefield.upgrade.camouflage.name=Augmentation de camouflage
-item.warpdrive.forcefield.upgrade.camouflage.tooltip=§4Travail en cours\nDéguise le champ de force avec un block personnalisé. Place un bloc juste au-dessus du relais d'augmentation pour définir le bloc de camouflage.
-item.warpdrive.forcefield.upgrade.cool.name=Augmentation de refroidissement
-item.warpdrive.forcefield.upgrade.cool.tooltip=§4Travail en cours\nCongeler blocs et entités. Ajoutes en d'autres pour augmenter l'effet. Ajoute une inversion pour un effet de zone ou terraformation.
+item.warpdrive.forcefield.upgrade.camouflage.tooltip=Déguise le champ de force avec un block personnalisé. Place un bloc juste au-dessus du relais d'augmentation pour définir le bloc de camouflage.
+item.warpdrive.forcefield.upgrade.cooling.name=Augmentation de refroidissement
+item.warpdrive.forcefield.upgrade.cooling.tooltip=Refroidit blocs et entités. Ajoutes en d'autres pour augmenter l'effet. Ajoute une inversion pour un effet de zone ou terraformation.
 item.warpdrive.forcefield.upgrade.fusion.name=Augmentation de fusion
 item.warpdrive.forcefield.upgrade.fusion.tooltip=Fusionne les champs de force partageant le même réseau de fréquence de faisceau
-item.warpdrive.forcefield.upgrade.invert.name=Augmentation d'inversion
-item.warpdrive.forcefield.upgrade.invert.tooltip=§4Travail en cours\nModifie la zone d'effet de surface en volume. Utilise le pour cibler des entités à l'intérieur du champ ou effectuer une terraformation.
-item.warpdrive.forcefield.upgrade.mute.name=Augmentation de silencieux
-item.warpdrive.forcefield.upgrade.mute.tooltip=§4Travail en cours\nAbsorbe le son émit par le block augmenté
-item.warpdrive.forcefield.upgrade.pump.name=Augmentation de pompage
-item.warpdrive.forcefield.upgrade.pump.tooltip=§4Non implementé\nPompe des liquides à l'emplacement du champ de force. Ajoute d'autres pompes pour supporter des fluides plus visceux tels que la lave.
+item.warpdrive.forcefield.upgrade.heating.name=Augmentation de chauffage
+item.warpdrive.forcefield.upgrade.heating.tooltip=Chauffe les blocs et entités. Ajoutes en d'autres pour accroître l'effet. Ajoute une inversion pour un effet de zone ou terraformation.
+item.warpdrive.forcefield.upgrade.inversion.name=Augmentation d'inversion
+item.warpdrive.forcefield.upgrade.inversion.tooltip=§4En cours d'implémentation\nModifie la zone d'effet de surface en volume. Utilise le pour cibler des entités à l'intérieur du champ ou effectuer une terraformation.
+item.warpdrive.forcefield.upgrade.itemPort.name=Augmentation de port d'item
+item.warpdrive.forcefield.upgrade.itemPort.tooltip=S'interface avec des conteneurs attachés. Ajoutes une Augmentation d'attraction pour collecter les items du Casseur de block. Ajoutes une augmentation de répulsion pour fournir les blocks à placer avec l'augmentation de stabilisation.
+Interface with attached containers. Add an Attraction upgrade to collect Block breaker drops.
+item.warpdrive.forcefield.upgrade.pumping.name=Augmentation de pompage
+item.warpdrive.forcefield.upgrade.pumping.tooltip=§4En cours d'implémentation\nPompe des liquides à l'emplacement du champ de force. Ajoute d'autres pompes pour supporter des fluides plus visceux tels que la lave.
 item.warpdrive.forcefield.upgrade.range.name=Augmentation de portée
 item.warpdrive.forcefield.upgrade.range.tooltip=Augmente la portée maximum du projecteur
+item.warpdrive.forcefield.upgrade.repulsion.name=Augmentation de répulsion
+item.warpdrive.forcefield.upgrade.repulsion.tooltip=Pousse les items à placer par l'augmentation de stabilisation. Ajoutes en d'autres pour affecter les items, animaux passifs, monstres et éventuellement les joueurs. Ajoute une inversion pour un effet de zone ou terraformation.
 item.warpdrive.forcefield.upgrade.rotation.name=Augmentation de rotation
 item.warpdrive.forcefield.upgrade.rotation.tooltip=Permet la rotation du champ de force projeté
 item.warpdrive.forcefield.upgrade.shock.name=Augmentation de décharge électrique
-item.warpdrive.forcefield.upgrade.shock.tooltip=§4Travail en cours\nElectrifie les blocks et entités. Ajoutes en d'autres pour accroître l'effet. Ajoute une inversion pour un effet de zone ou terraformation.
+item.warpdrive.forcefield.upgrade.shock.tooltip=Electrifie les blocks et entités. Ajoutes en d'autres pour accroître l'effet. Ajoute une inversion pour un effet de zone ou terraformation.
+item.warpdrive.forcefield.upgrade.silencer.name=Augmentation de silencieux
+item.warpdrive.forcefield.upgrade.silencer.tooltip=Absorbe le son émit par le block augmenté
 item.warpdrive.forcefield.upgrade.speed.name=Augmentation de vitesse
 item.warpdrive.forcefield.upgrade.speed.tooltip=Accroît la vitesse de projection du champ de force
-item.warpdrive.forcefield.upgrade.stabilize.name=Augmentation de stabilization
-item.warpdrive.forcefield.upgrade.stabilize.tooltip=§4Non implementé\nPlace des blocks au lieu de projecter un champ de force
+item.warpdrive.forcefield.upgrade.stabilization.name=Augmentation de stabilisation
+item.warpdrive.forcefield.upgrade.stabilization.tooltip=Place des blocks au lieu de projecter un champ de force
 item.warpdrive.forcefield.upgrade.thickness.name=Augmentation d'épaisseur
 item.warpdrive.forcefield.upgrade.thickness.tooltip=Accroît l'épaisseur du champ de force. Ajoutes en d'autres pour augmenter l'effet, jusqu'à doubler l'épaisseur.
 item.warpdrive.forcefield.upgrade.translation.name=Augmentation de translation
 item.warpdrive.forcefield.upgrade.translation.tooltip=Permet la translation du champ de force projeté
-item.warpdrive.forcefield.upgrade.warm.name=Augmentation de chauffage
-item.warpdrive.forcefield.upgrade.warm.tooltip=§4Travail en cours\nChauffe les blocs et entités. Ajoutes en d'autres pour accroître l'effet. Ajoute une inversion pour un effet de zone ou terraformation.
+item.warpdrive.forcefield.upgrade.tooltip.usage.projector=§bClique droit sur un projecteur§r pour ajouter l'augmentation
+item.warpdrive.forcefield.upgrade.tooltip.usage.relay=§bClique droit sur un relais§r pour installer l'augmentation
+item.warpdrive.forcefield.upgrade.tooltip.usage.dismount=§bShift-clique droit§r pour démonter l'augmentation
 
 item.warpdrive.upgrade.Power.name=Amélioration de puissance
 item.warpdrive.upgrade.Speed.name=Amélioration de vitesse
 item.warpdrive.upgrade.Range.name=Amélioration de portée
 item.warpdrive.upgrade.Energy.name=Amélioration d'énergie
+
 
 item.warpdrive.tool.TuningFork.name=Diapason
 item.warpdrive.tool.TuningFork.white.name=Diapason blanc
@@ -111,9 +123,10 @@ item.warpdrive.tool.TuningFork.brown.name=Diapason marron
 item.warpdrive.tool.TuningFork.green.name=Diapason vert
 item.warpdrive.tool.TuningFork.red.name=Diapason rouge
 item.warpdrive.tool.TuningFork.black.name=Diapason noir
+
 item.warpdrive.tool.TuningFork.tooltip.videoChannel=Canal vidéo ajusté à %1$d
 item.warpdrive.tool.TuningFork.tooltip.beamFrequency=Fréquence de faisceau ajustée à %1$d
-item.warpdrive.tool.TuningFork.tooltip.usage=\n\n§bCliques droit sur un block§7 pour ajuster ses cristaux\n§bAccroupi§7 pour ajuster les cristaux alternatifs
+item.warpdrive.tool.TuningFork.tooltip.usage=§bCliques droit sur un block§r pour ajuster ses cristaux\n§bAccroupi§r pour ajuster les cristaux alternatifs
 item.warpdrive.tool.TuningFork.use.setVideoChannel=%1$s est désormais accordé au Canal vidéo %2$d
 item.warpdrive.tool.TuningFork.use.setBeamFrequency=%1$s est désormais accordé à la Fréquence de faisceau %2$d
 
@@ -153,8 +166,14 @@ tile.warpdrive.forcefield.block1.name=Bloc de champ de force élémentaire
 tile.warpdrive.forcefield.block2.name=Bloc de champ de force avancé
 tile.warpdrive.forcefield.block3.name=Bloc de champ de force supérieur
 tile.warpdrive.forcefield.projector1.name=Projecteur élémentaire de champ de force
+tile.warpdrive.forcefield.projector1.single.name=Simple projecteur élémentaire de champ de force
+tile.warpdrive.forcefield.projector1.double.name=Double projecteur élémentaire de champ de force
 tile.warpdrive.forcefield.projector2.name=Projecteur avancé de champ de force
+tile.warpdrive.forcefield.projector2.single.name=Simple projecteur avancé de champ de force
+tile.warpdrive.forcefield.projector2.double.name=Double projecteur avancé de champ de force
 tile.warpdrive.forcefield.projector3.name=Projecteur supérieur de champ de force
+tile.warpdrive.forcefield.projector3.single.name=Simple projecteur supérieur de champ de force
+tile.warpdrive.forcefield.projector3.double.name=Double projecteur supérieur de champ de force
 
 tile.warpdrive.forcefield.relay1.name=Relais élémentaire de champ de force
 tile.warpdrive.forcefield.relay1.tooltip=Supporte jusqu'à 1 augmentation de champ de force partagée avec son réseau
@@ -276,8 +295,8 @@ tile.warpdrive.hull3.glass.red.name=Vitre de coque supérieure rouge
 tile.warpdrive.hull3.glass.black.name=Vitre de coque supérieure noire
 
 
-warpdrive.guide.prefix=%1$s: 
-warpdrive.error.badTileEntity=§cce bloc requiers une mise à jour par dépose puis repose. 
+warpdrive.guide.prefix=§6%1$s:§r 
+warpdrive.error.badTileEntity=§cCe bloc requiers une mise à jour par dépose puis repose.
 warpdrive.monitor.viewingCamera=Affichage de la caméra à %2$d, %3$d, %4$d sur le canal vidéo %1$d
 warpdrive.ship.attachedPlayers=Joueurs attachés: %1$s
 warpdrive.ship.playerAttached=Tu es désormais attaché au vaisseau %1$s.\nLes joueurs attachés sont %2$s
@@ -285,8 +304,18 @@ warpdrive.ship.playerDetached=Tu es désormais détaché du vaisseau %1$s.\nLes 
 warpdrive.ship.statusLine.cooling=Encore %1$d s de refroidissement.
 warpdrive.ship.statusLine.isolation=Les %1$d blocs d'isolations actifs fournissent %2$2.1f%% d'absorption.
 warpdrive.energy.statusLine=Le niveau d'énergie est de %1$s/%2$s EU.
-warpdrive.beamFrequency.statusLine.valid=La fréquence de faisceau %1$d est valide. 
-warpdrive.beamFrequency.statusLine.invalid=§cLa fréquence de faisceau %1$d est invalide!
+warpdrive.beamFrequency.statusLine.valid=La fréquence de faisceau %1$d est valide.
+warpdrive.beamFrequency.statusLine.invalid=§cLa fréquence de faisceau %1$d est invalide.
+warpdrive.beamFrequency.statusLine.undefined=§7La fréquence de faisceau est non définie.\n§bUtilises un Diapason§f pour ajuster la fréquence de faisceau.
+
+warpdrive.forcefield.guide.lowPower=Nous sommes à court d'énergie Capitaine, réduissez la consommation ou appelez l'ingénieur écossais pour booster notre production!
+
+warpdrive.forcefield.shape.result.wrongSide=§cIl n'y a pas de projecteur électromagnétique sur cette face.
+warpdrive.forcefield.shape.result.noShapeToDismount=§cAucune forme à démonter.
+warpdrive.forcefield.shape.result.notEnoughShapes.double=§cIl faut au moins 2 objets pour établir la forme d'un projecteur double face.
+warpdrive.forcefield.shape.result.notEnoughShapes.single=§cIl faut au moins 1 object pour établir la forme d'un projecteur simple face.
+warpdrive.forcefield.shape.result.dismounted=Forme démontée correctement.
+warpdrive.forcefield.shape.result.mounted=Forme montée correctement.
 
 warpdrive.forcefield.shape.statusLine.none=§cLa forme n'est pas définie.
 warpdrive.forcefield.shape.statusLine.double=La forme est %1$s plein(e)
@@ -299,28 +328,40 @@ warpdrive.forcefield.shape.statusLine.plane=un plan
 warpdrive.forcefield.shape.statusLine.tube=un tube
 warpdrive.forcefield.shape.statusLine.tunnel=un tunnel
 
-warpdrive.forcefield.upgrade.statusLine.none=§cPas d'augmentation installée.
+warpdrive.forcefield.upgrade.result.noUpgradeToDismount=§cAucune amélioration à démonter.
+warpdrive.forcefield.upgrade.result.notEnoughUpgrades=§cIl faut au moins 1 object pour améliorer ce bloc.
+warpdrive.forcefield.upgrade.result.invalidProjectorUpgrade=§cCette amélioration est trop grosse pour un projecteur, utilises un relais à la place.
+warpdrive.forcefield.upgrade.result.invalidRelayUpgrade=§cCette amélioration s'applique uniquement sur un projecteur.
+warpdrive.forcefield.upgrade.result.tooManyUpgrades=§cCette amélioration est déjà montée %1$s fois sur ce bloc, utilises un relais à la place.
+warpdrive.forcefield.upgrade.result.dismounted=Amélioration démontée correctement.
+warpdrive.forcefield.upgrade.result.mounted=Amélioration montée correctement.
+
+warpdrive.forcefield.upgrade.statusLine.none=§7Pas d'augmentation installée.
 warpdrive.forcefield.upgrade.statusLine.valid=Augmentation avec %1$s
-warpdrive.forcefield.upgrade.statusLine.break=casseur de bloc
+warpdrive.forcefield.upgrade.statusLine.attraction=attraction
+warpdrive.forcefield.upgrade.statusLine.breaking=casseur de bloc
 warpdrive.forcefield.upgrade.statusLine.camouflage=camouflage
-warpdrive.forcefield.upgrade.statusLine.cool=refroidissement
+warpdrive.forcefield.upgrade.statusLine.cooling=refroidissement
 warpdrive.forcefield.upgrade.statusLine.fusion=fusion
-warpdrive.forcefield.upgrade.statusLine.invert=inversion
-warpdrive.forcefield.upgrade.statusLine.mute=silencieux
-warpdrive.forcefield.upgrade.statusLine.pump=pompe
+warpdrive.forcefield.upgrade.statusLine.heating=chauffage
+warpdrive.forcefield.upgrade.statusLine.inversion=inversion
+warpdrive.forcefield.upgrade.statusLine.itemPort=port d'item
+warpdrive.forcefield.upgrade.statusLine.pumping=pompe
 warpdrive.forcefield.upgrade.statusLine.range=portée
+warpdrive.forcefield.upgrade.statusLine.repulsion=répulsion
 warpdrive.forcefield.upgrade.statusLine.rotation=rotation
 warpdrive.forcefield.upgrade.statusLine.shock=décharge électrique
+warpdrive.forcefield.upgrade.statusLine.silencer=silencieux
 warpdrive.forcefield.upgrade.statusLine.speed=vitesse
-warpdrive.forcefield.upgrade.statusLine.stabilize=stabilisation
+warpdrive.forcefield.upgrade.statusLine.stabilization=stabilisation
 warpdrive.forcefield.upgrade.statusLine.thickness=épaisseur
 warpdrive.forcefield.upgrade.statusLine.translation=translation
-warpdrive.forcefield.upgrade.statusLine.warm=chauffage
 
-warpdrive.videoChannel.statusLine.valid=Le canal vidéo %1$d est valide. 
-warpdrive.videoChannel.statusLine.validCamera=Le canal vidéo %1$d est valide pour la caméra à %2$d %3$d %4$d. 
+warpdrive.videoChannel.statusLine.valid=Le canal vidéo %1$d est valide.
+warpdrive.videoChannel.statusLine.validCamera=Le canal vidéo %1$d est valide pour la caméra à %2$d %3$d %4$d.
 warpdrive.videoChannel.statusLine.invalid=§cLe canal vidéo %1$d est invalide.
 warpdrive.videoChannel.statusLine.invalidOrNotLoaded=§cLe canal vidéo %1$d est invalide ou la caméra est trop loin!
+warpdrive.videoChannel.statusLine.undefined=§7Le canal vidéo est non défini.\n§bUtilises un Diapason§r pour ajuster la fréquence de faisceau.
 warpdrive.cloakingCore.invalidAssembly=§cL'assemblage est invalide!
 warpdrive.cloakingCore.disabled=Le champ d'invisibilité est désactivé
 warpdrive.cloakingCore.lowPower=§cLe champ d'invisibilité est en panne. Il nous faut plus d'énergie, Capitaine!
